version 0.2 (20??-??-??):
	General:
	* Proper disco#info handling (#51)
	* Added Windows compilation support
	* Send unavailable presences when shutting transport down
	* Working filetransfer from XMPP to legacy network when legacy network user
	  can't receive file.
	* Twitter protocol support (Twitter with http://code.google.com/p/prpltwtr/)
	* $filename now is an implicitly set to the name of the file without
	  the extension. 
	* Fixed crash when legacy network user canceled filetransfer
	* Fixed crash when XMPP user canceled Adhoc command execution.
	* Fixed crash when two XMPP users use one legacy network account.
	* Don't send duplicates presences.
	* Don't forward typing notification without opened conversation
	* Fixed transport unregister process. Buddies are now removed also if user
	  doesn't support Roster Item Exchange.
	* Forward VCard avatars from XMPP to legacy network.

	spectrumctl:
	* The script now does rigorous checking of ownership and permissions
	  on all the important files and directories.
	* Accept $filename as variable
	* Statistics gathering via config_interface
	* Two new command-line options: --no-daemon and --debug.
	* env-variable SPECTRUM_PATH can now configure how spectrumctl is
	  called. If the variable is set, it assumes that spectrum is in its
	  PATH.

	XMPP:
	* MUC support for XMPP

	IRC:
	* IRC Nickserv password can be set via Adhoc command
	* Fixed Private Messages
	* Using IRC Helper (http://plugins.guifications.org/trac/wiki/irchelper) for
	  identyfing user. Used only if IRC Helper is installed.

version 0.1 (2010-02-05):
	* initial version