@@ -23,6 +23,9 @@ port=5347
 
 config_interface = /var/run/spectrum/$jid.sock
 
+# IP:port where filetransfer proxy binds to. This has to be public IP.
+#filetransfer_proxy_bind=4.2.2.1:12345
+
 # admin JIDs - Jabber IDs of transport administrators who have access to admin adhoc commands
 # separated by semicolons
 #admins=admin@example.com;foo@bar.cz
